--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -245,7 +245,7 @@
 @media screen and (max-width: 768px){
     header{
         padding: 0;
-        //overflow-y: auto !important;
+        overflow-y: auto !important;
         //overflow-x: hidden !important;
 
         /* Style the scrollbar */
